add put request to /order/satus
