# packages/api/openapi.yml
@@ -263,7 +263,35 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Order"
-
+    put:
+      tags:
+        - order
+      description: |
+        1つの order の中の全ての don の状態を targetStatus に更新する
+        order 単位で変更可能な status は 2 -> 3 or 3 -> 2 のみ.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                targetStatus:
+                  type: integer
+                  format: int32
+                orderId:
+                  type: integer
+                  format: int32
+              required:
+                - targetStatus
+                - orderId
+      responses:
+        '200':
+          description: 更新後の Order を返す
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
   "/toppings":
     get:
       tags:
